<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fifth"
    android:orientation="vertical"
    tools:context=".activity.GioiThieuChungActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_Gioithieuchung"
        app:title="@string/introduce"
        app:navigationIcon="@drawable/ic_back_button"
        app:titleTextColor="@color/white"
        android:background="@color/background_cost_color"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <FrameLayout
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/margin_1_2"
            android:layout_width="@dimen/wrap_cart_width"
            android:layout_height="?attr/actionBarSize">
            <FrameLayout
                android:onClick="openCart"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/miniCart"
                    android:src="@drawable/ic_cart"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.cardview.widget.CardView
                    android:elevation="@dimen/margin_1"
                    android:layout_gravity="top|left"
                    app:cardCornerRadius="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="22dp"
                    android:background="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.nex3z.notificationbadge.NotificationBadge
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:id="@+id/thongbao_soluong">

                    </com.nex3z.notificationbadge.NotificationBadge>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_marginTop="@dimen/margin_1_2"
        android:layout_marginBottom="@dimen/margin_1_2"
        android:background="@color/third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:onClick="ToHome"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:src="@drawable/bestie1"
                android:layout_marginRight="@dimen/margin_1_2"
                android:layout_width="@dimen/item_logo_top_size"
                android:layout_height="@dimen/item_logo_top_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_text"
                android:paddingRight="@dimen/padding_1"
                android:fontFamily="@font/dancing_script_medium"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="@dimen/padding_1"
            android:text="@string/res_name"
            android:textColor="#03070B"
            android:textSize="@dimen/text_size_meidum"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_lienhe"
            android:layout_below="@+id/label_top"
            android:layout_marginTop="@dimen/margin_1_2"
            android:layout_marginBottom="@dimen/margin_1_2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_1"
                android:layout_marginRight="@dimen/margin_1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/margin_1_2"
                    android:layout_marginBottom="@dimen/margin_1_2"
                    android:elevation="@dimen/margin_1"
                    app:cardCornerRadius="@dimen/radius">

                    <ImageView
                        android:id="@+id/img_hinh_nha_hang"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/lienhe" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_1_2"
                    android:layout_marginBottom="@dimen/margin_1_2"
                    android:drawableTop="@drawable/ic_location"
                    android:drawablePadding="@dimen/padding_1"
                    android:paddingLeft="@dimen/padding_1"
                    android:text="@string/res_address"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:textStyle="italic" />

                <!--                <fragment-->
                <!--                    android:id="@+id/map"-->
                <!--                    android:name="com.google.android.gms.maps.SupportMapFragment"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_marginTop="30dp"-->
                <!--                    tools:context=".activity.GioiThieuChungActivity" />-->
            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/btn_lienhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_2"
            android:layout_marginTop="@dimen/margin_1_2"
            android:layout_marginRight="@dimen/margin_2"
            android:layout_marginBottom="@dimen/margin_1"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/second"
            android:onClick="ToLienHe"
            android:text="@string/contact"
            android:textColor="#F1EFEE"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />


    </RelativeLayout>
</LinearLayout>